--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 html {
-	background: #161415 url(../images/3.jpg) no-repeat center center fixed;
+	background: #000 url(../images/.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover !important;
 	-moz-background-size: cover !important;
 	background-size: cover !important;
